# podcast-workflow

./: .env.example  .gitignore  LICENSE  README.md  batch_process.py  main.py  pyproject.toml  run_batch.bat  run_dashboard.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/02-audio-processing-and-distribution/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_episodes_table.py  b3c4d5e6f7a8_add_presets_and_jobs_tables.py  cf39bf4e68f2_create_hosts_and_styles_tables.py  d4e5f6a7b8c9_add_episode_cover_url.py
data/: podcast.db
src/: __main__.py  config.py  exceptions.py  hash_password.py
src/application/: job_processor.py  podcast_service.py  retry.py
src/domain/: models.py  path_validator.py  prompt_builder.py
src/infrastructure/: audio.py  chunker.py  obsidian_writer.py  reader.py  rss.py  sanitizer.py
tests/: conftest.py  test_audio_processing.py  test_auth.py  test_chunker.py  test_config.py  test_csrf.py  test_dashboard_episodes.py  test_dashboard_hosts.py  test_dashboard_presets.py  test_dashboard_styles.py  test_domain_models_phase3.py  test_episode_repository.py  test_http_hardening.py  test_job_repository.py  test_migrations.py  test_models.py  test_obsidian_writer.py  test_path_validation.py  test_podcast_service.py  test_preset_repository.py  test_prompt_builder.py  test_repositories.py  test_retry.py  test_rss.py  test_sanitizer.py  test_watcher_handler.py  test_web_app.py
(+59 files in other folders)
